### Changed - 券種グループに登録された券種の順序を変更しないように調整

--- a/views/ticketTypeGroup/_listTicketTypes.ejs
+++ b/views/ticketTypeGroup/_listTicketTypes.ejs
@@ -9,17 +9,21 @@
             </div>
             <div class="modal-body">
                 <div class="panel-body">
-                    <div id="list" class="table-responsive scroll-vertical" style="display:block;">
-                        <table class="table table-bordered table-striped mb-0">
-                            <thead>
-                                <tr>
-                                    <th>券種名</th>
-                                </tr>
-                            </thead>
-                            <tbody id="listTicketType">
+                    <div id="list" class="" style="display:block;">
 
-                            </tbody>
-                        </table>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead class="text-primary">
+                                    <tr>
+                                        <th>券種名</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="listTicketType">
+
+                                </tbody>
+                            </table>
+                        </div>
+
                     </div>
                 </div>
             </div>
