--- a/views/creativeWorks/movie/edit.ejs
+++ b/views/creativeWorks/movie/edit.ejs
@@ -15,15 +15,7 @@ Aa-9
             <%- include('../../common/successMessage') %>
         </div>
 
-        <div class="form-group row">
-            <label class="">
-                作品コード
-            </label>
-            <input readonly style="width:auto;" type="text" class="form-control" name="identifier" id="identifier"
-                placeholder="" maxlength=64 value="<%= forms.identifier %>">
-        </div>
-
-        <%- include('form', { forms: forms, isNew: true }) %>
+        <%- include('form', { forms: forms, isNew: false }) %>
 
         <div class="btn-area panel-body">
             <button type="button" class="btn btn-ok btn-primary">更新する</button>
