--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -1,93 +1,135 @@
-<div class="form-group">
-    <label for="name" class="">
-        作品名<span class="text-danger">＊</span>
-    </label>
-    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors.name) { %>
-        <%- errors.name.msg %>
-        <% } %>
-    </p>
-</div>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">基本設定</h4>
+        </div>
+    </div>
 
-<div class="form-group">
-    <label class="" for="headline">
-        サブタイトル
-    </label>
-    <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64 value="<%= forms.headline %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors.headline) { %>
-        <%- errors.headline.msg %>
-        <% } %>
-    </p>
-</div>
+    <div class="card-body">
+        <div class="form-group bmd-form-group">
+            <% if (isNew) { %>
+            <label for="identifier" class="bmd-label-static">
+                作品コード<span class="text-danger">＊</span>
+            </label>
+            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+                value="<%= forms.identifier %>">
+            <span class="bmd-help">半角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.identifier) { %>
+                <%- errors.identifier.msg %>
+                <% } %>
+            </span>
 
-<div class="form-group">
-    <label for="duration" class="">
-        上映時間
-    </label>
-    <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder=""
-        maxlength=10 value="<%= forms.duration %>">
-    分
-    <p class="message">
-        半角10文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors.duration) { %>
-        <%- errors.duration.msg %>
-        <% } %>
-    </p>
-</div>
+            <% } else { %>
+            <label class="bmd-label-static">
+                作品コード
+            </label>
+            <input readonly style="width:auto;" type="text" class="form-control" name="identifier" id="identifier"
+                placeholder="" maxlength=64 value="<%= forms.identifier %>">
+            <% } %>
+        </div>
 
-<div class="form-group">
-    <label for="contentRating" class="">
-        レイティング<span class="text-danger">＊</span>
-    </label>
-    <%
-            let ratings = [
-                {code: '', name: {ja: 'なし', en:'None'}},
-                {code: 'G', name: {ja: 'General', en:'General'}},
-                {code: 'PG12', name: {ja: 'PG-12指定', en:'PG-12'}},
-                {code: 'R15+', name: {ja: 'R-15指定', en:'R-15'}},
-                {code: 'R18+', name: {ja: 'R-18指定', en:'R-18'}}
-            ];
-        %>
-    <select name="contentRating" id="contentRating" class="form-control">
-        <% for (let rating of ratings) { %>
-        <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected" <% } %>>
-            <%- rating.name.ja %>
-        </option>
-        <% } %>
-    </select>
-    <p class="error message text-danger">
-        <% if (errors && errors.contentRating) { %>
-        <%- errors.contentRating.msg %>
-        <% } %>
-    </p>
-</div>
+        <div class="form-group bmd-form-group">
+            <label for="name" class="bmd-label-static">
+                作品名<span class="text-danger">＊</span>
+            </label>
+            <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
+            <span class="bmd-help">全角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.name) { %>
+                <%- errors.name.msg %>
+                <% } %>
+            </span>
+        </div>
 
-<div class="form-group">
-    <label class="" for="datePublished">
-        公開日
-    </label>
-    <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished"
-        value="<%= forms.datePublished %>">
-</div>
+        <div class="form-group bmd-form-group">
+            <label class="bmd-label-static" for="headline">
+                サブタイトル
+            </label>
+            <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64
+                value="<%= forms.headline %>">
+            <span class="bmd-help">全角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.headline) { %>
+                <%- errors.headline.msg %>
+                <% } %>
+            </span>
+        </div>
 
-<div class="form-group">
-    <label class="" for="offers[availabilityEnds]">
-        興行終了予定日
-    </label>
-    <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off"
-        id="offers[availabilityEnds]" value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
-</div>
+        <div class="form-group bmd-form-group">
+            <label for="duration" class="bmd-label-static">
+                上映時間
+            </label>
+            <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration"
+                placeholder="" maxlength=10 value="<%= forms.duration %>">
+            分
+            <span class="bmd-help">半角10文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.duration) { %>
+                <%- errors.duration.msg %>
+                <% } %>
+            </span>
+        </div>
 
-<%- include('../../common/part/_additionalProperty', {
-    additionalProperty: forms.additionalProperty
-}) %>
+        <div class="form-group bmd-form-group">
+            <label for="contentRating" class="bmd-label-static">
+                レイティング<span class="text-danger">＊</span>
+            </label>
+            <%
+                    let ratings = [
+                        {code: '', name: {ja: 'なし', en:'None'}},
+                        {code: 'G', name: {ja: 'General', en:'General'}},
+                        {code: 'PG12', name: {ja: 'PG-12指定', en:'PG-12'}},
+                        {code: 'R15+', name: {ja: 'R-15指定', en:'R-15'}},
+                        {code: 'R18+', name: {ja: 'R-18指定', en:'R-18'}}
+                    ];
+                %>
+            <select name="contentRating" id="contentRating" class="form-control">
+                <% for (let rating of ratings) { %>
+                <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected"
+                    <% } %>>
+                    <%- rating.name.ja %>
+                </option>
+                <% } %>
+            </select>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.contentRating) { %>
+                <%- errors.contentRating.msg %>
+                <% } %>
+            </span>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label class="bmd-label-static" for="datePublished">
+                公開日
+            </label>
+            <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished"
+                value="<%= forms.datePublished %>">
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label class="bmd-label-static" for="offers[availabilityEnds]">
+                興行終了予定日
+            </label>
+            <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off"
+                id="offers[availabilityEnds]"
+                value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
+        </div>
+    </div>
+</div>
+<!-- end card -->
+
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">追加特性</h4>
+        </div>
+    </div>
+    <div class="card-body">
+        <%- include('../../common/part/_additionalProperty', {
+            additionalProperty: forms.additionalProperty
+        }) %>
+
+    </div>
+</div>
+<!-- end card -->
